Fixed font sizing issue on mobile devices

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -48,7 +48,6 @@ p {
 }
 
 .page-title {
-  font-size: 3.1rem;
   font-weight: 700;
   font-family: $primary-font;
   color: $white-color;
